--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ mjx-line{height: 7px !important;}
                     <li><a href="./debo/index.html">Vitals</a></li>
                     <li><a href="https://github.com/lightning417techa/shazamIt">Database</a></li>
                     <li><a href="EEG.html">EEG</a></li>
-                    <li><a href="IDscan.html">Cryptology</a></li>
+                    <li><a href="IDscan.html">Dual Lens</a></li>
                     <li><a href="#demo">Systems</a></li>
                 </ul>
             </nav>
