--- a/IDscan.html
+++ b/IDscan.html
@@ -57,10 +57,10 @@
       frameborder="0"
       title="VPN Skynet Main"
     ></iframe>
-    <!-- Right side: vpnskynet.com/debo/index.html -->
+    <!-- Right side: vpnskynet.com/IDscan.html -->
     <iframe
       class="split-right"
-      src="https://vpnskynet.com/debo/index.html"
+      src="https://vpnskynet.com/IDscan.html"
       allow="camera; microphone"
       allowfullscreen
       frameborder="0"
