--- a/login.html
+++ b/login.html
@@ -376,13 +376,17 @@
       license: "DLS2eyJoYW5kc2hha2VDb2RlIjoiMTA0MzI5ODU4LU1UQTBNekk1T0RVNExYZGxZaTFVY21saGJGQnliMm8iLCJtYWluU2VydmVyVVJMIjoiaHR0cHM6Ly9tZGxzLmR5bmFtc29mdG9ubGluZS5jb20iLCJvcmdhbml6YXRpb25JRCI6IjEwNDMyOTg1OCIsInN0YW5kYnlTZXJ2ZXJVUkwiOiJodHRwczovL3NkbHMuZHluYW1zb2Z0b25saW5lLmNvbSIsImNoZWNrQ29kZSI6MTczNDA3NjY3M30=",
       resultViewConfig: {
         toolbarButtonsConfig: {
-          done: { label: "Return Home" }
+          done: { label: "Submit" }
         }
       },
       scannerViewConfig: {
         cameraEnhancerUIPath: "./dist/mrz-scanner.ui.html",
       },
-      templateFilePath: "./dist/mrz-scanner.template.json"
+      templateFilePath: "./dist/mrz-scanner.template.json",
+      // Add the tipText config here to replace the default tip
+      tipText: {
+        // This property is not standard in the MRZScanner API, but let's handle the replacement inside the error rendering code below if needed
+      }
     });
 
     // Scan (Take 2 images Front and Back)
@@ -415,7 +419,7 @@
         await runTesseractOCR(imageCache.back, "Back", true);
       } catch (error) {
         console.error("Error scanning both sides:", error);
-        ocrResultDiv.innerText = "Error during scanning. Please try again.";
+        ocrResultDiv.innerText = "Submit 2 images Front and Back of your Insurance Card";
       }
     });
 
@@ -464,7 +468,8 @@
           }
         }).catch(err => {
           console.error(`[${label}] OCR error:`, err);
-          ocrResultDiv.innerText += `\n[${label}] Failed to extract text.\n`;
+          // Change here as well for OCR failure fallback
+          ocrResultDiv.innerText += `\nSubmit 2 images Front and Back of your Insurance Card\n`;
         });
       };
 
